optimized build with GCC broken

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs25
    • Affects Version/s: None
    • Component/s: hotspot
    • b33
    • generic
    • linux

        Some ifndef PRODUCT methods are used in asserts and GCC is complaining about them, e.g.:

        /home/cthaling/ws/hotspot/src/share/vm/classfile/classFileParser.cpp:3045: error: ‘void parseAndPrintGenericSignatures(instanceKlassHandle, Thread*)’ defined but not used

              Assignee:
              Roland Westrelin
              Reporter:
              Christian Thalinger (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: